fix(table): fixed-header overflow should be hidden

--- a/styles/AdvancedTable.scss
+++ b/styles/AdvancedTable.scss
@@ -44,6 +44,9 @@
 
       .n-advance-table__header {
         border-radius: 0;
+        margin-right: -8px;
+        overflow: hidden;
+        margin-bottom: 0;
       }
     }
     .n-advance-table__fixed--right {
